[gd_scene load_steps=10 format=3 uid="uid://bfk0gyurb1dgq"]

[ext_resource type="Texture2D" uid="uid://dvxb7gtkcuttc" path="res://Assets/Bosses/Boss sprites/BossMushroom1/Walk1.png" id="1_5w83j"]
[ext_resource type="Script" path="res://Assets/Bosses/Boss1/boss_1.gd" id="1_xs56g"]
[ext_resource type="Texture2D" uid="uid://d1brlnt0t5e6i" path="res://Assets/Bosses/Boss sprites/BossMushroom1/Walk2.png" id="2_avtjs"]
[ext_resource type="Texture2D" uid="uid://c0jm0ebfcmhhg" path="res://Assets/Bosses/Boss sprites/BossMushroom1/Walk3.png" id="3_r5nmo"]
[ext_resource type="Texture2D" uid="uid://cgcursoq0plcr" path="res://Assets/Bosses/Boss sprites/BossMushroom1/Walk4.png" id="4_tmqgr"]
[ext_resource type="Texture2D" uid="uid://boirucjiqu6h2" path="res://Assets/Bosses/Boss sprites/BossMushroom1/Stand.png" id="5_bbl20"]

[sub_resource type="SpriteFrames" id="SpriteFrames_edw08"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5w83j")
}, {
"duration": 1.0,
"texture": ExtResource("2_avtjs")
}, {
"duration": 1.0,
"texture": ExtResource("3_r5nmo")
}, {
"duration": 1.0,
"texture": ExtResource("4_tmqgr")
}, {
"duration": 1.0,
"texture": ExtResource("3_r5nmo")
}, {
"duration": 1.0,
"texture": ExtResource("2_avtjs")
}],
"loop": true,
"name": &"follow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bbl20")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqoxp"]
size = Vector2(72, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usuyn"]
size = Vector2(1281, 687)

[node name="Boss1" type="CharacterBody2D"]
script = ExtResource("1_xs56g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_edw08")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.428517

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_mqoxp")

[node name="debug" type="Label" parent="."]
texture_filter = 1
offset_left = -31.0
offset_top = -94.0
offset_right = 34.0
offset_bottom = -70.0
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 140)

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = -53.0
offset_top = -117.0
offset_right = 47.0
offset_bottom = -90.0
max_value = 2.0
value = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-22.5, -266.5)
shape = SubResource("RectangleShape2D_usuyn")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
